--- a/src/data/folderMapping.json
+++ b/src/data/folderMapping.json
@@ -1,5 +1,5 @@
 {
-  "bentrebatri180922": "Bến Tre - Ba Tri (18-09-2022)",
+  "kapi-bong-baby-no-edit": "(2025) Album Kapi - Bống Baby House (Chưa chỉnh)",
   "folder2": "Thư mục 2",
   "folder3": "Thư mục 3"
 } 
