Add new album json
"quangngailysonjun2023": "(Jun 2023) Quãng Ngãi - Lý Sơn",
  "anhcuoihyphucnov2022": "(Nov 2022) Ảnh Cưới Hỷ Phục",
  "phanthietcompanytripsaltojul2022": "(Jul 2022) Phan Thiết - Company Trip Salto",
  "bentrebatri180922": "(Sep 2022) Bến Tre - Ba Tri"

--- a/src/data/folderMapping.json
+++ b/src/data/folderMapping.json
@@ -1,5 +1,7 @@
 {
   "kapi-bong-baby-no-edit": "(2025) Album Kapi - Bống Baby House (Chưa chỉnh)",
-  "folder2": "Thư mục 2",
-  "folder3": "Thư mục 3"
+  "quangngailysonjun2023": "(Jun 2023) Quãng Ngãi - Lý Sơn",
+  "anhcuoihyphucnov2022": "(Nov 2022) Ảnh Cưới Hỷ Phục",
+  "phanthietcompanytripsaltojul2022": "(Jul 2022) Phan Thiết - Company Trip Salto",
+  "bentrebatri180922": "(Sep 2022) Bến Tre - Ba Tri"
 } 
