--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.15.10",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "exif-js": "^2.3.0",
     "heic-convert": "^1.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
