--- a/src/data/folderMapping.json
+++ b/src/data/folderMapping.json
@@ -1,7 +1,13 @@
 {
-  "kapi-bong-baby-no-edit": "(2025) Album Kapi - Bống Baby House (Chưa chỉnh)",
+  "kapi-bong-baby-no-edit": "(Mar 2025) Album Kapi - Bống Baby House (Chưa chỉnh)",
+  "cambodiaapr2024": "(Apr 2024) Cambodia - Phnom Penh, Kep, Campot 🇰🇭",
+  "kiengianghonsonov2023": "(Nov 2023) Kiên Giang - Hòn Sơn",
   "quangngailysonjun2023": "(Jun 2023) Quãng Ngãi - Lý Sơn",
+  "thailanphuketapr2023": "(Apr 2023) Thailand - Phuket - Honeymoon Trip 🇹🇭",
+  "hgmvhn081222131222": "(Dec 2022) Hà Giang - Hà Nội - Mèo Vạc",
   "anhcuoihyphucnov2022": "(Nov 2022) Ảnh Cưới Hỷ Phục",
+  "gialai061022-091022": "(Oct 2022) Gia Lai",
+  "bentrebatri180922": "(Sep 2022) Bến Tre - Ba Tri",
   "phanthietcompanytripsaltojul2022": "(Jul 2022) Phan Thiết - Company Trip Salto",
-  "bentrebatri180922": "(Sep 2022) Bến Tre - Ba Tri"
+  "nhatrangfeb2022": "(Feb 2022) Nha Trang"
 } 
