FEAT: Add Sortpage and input page pagination

--- a/src/data/folderMapping.json
+++ b/src/data/folderMapping.json
@@ -8,6 +8,13 @@
   "anhcuoihyphucnov2022": "(Nov 2022) Ảnh Cưới Hỷ Phục",
   "gialai061022-091022": "(Oct 2022) Gia Lai",
   "bentrebatri180922": "(Sep 2022) Bến Tre - Ba Tri",
+  "dalat30822010822chuphinhcuoi": "(Sep 2022) Đà Lạt - Chụp Hình Cưới",
+  "vungtau28082022": "(Aug 2022) Vũng Tàu",
   "phanthietcompanytripsaltojul2022": "(Jul 2022) Phan Thiết - Company Trip Salto",
-  "nhatrangfeb2022": "(Feb 2022) Nha Trang"
+  "tetnguyendan2022": "(Feb 2022) Tết Nguyên Đán 2022",
+  "vungtaufeb2022": "(Feb 2022) Vũng Tàu",
+  "nhatrangfeb2022": "(Feb 2022) Nha Trang",
+  "tetduonglich2022": "(Jan 2022) Tết Dương Lịch 2022",
+  "dalat1417012022": "(Jan 2022) Đà Lạt - Đường Hoa Đào",
+  "weddingnhutnhi": "Thử váy cưới"
 } 
