--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.511.0",
     "@aws-sdk/s3-request-presigner": "^3.511.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@hello-pangea/dnd": "^18.0.1",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@types/react": "^18.2.55",
