FEAT: Add new mapping

--- a/src/data/folderMapping.json
+++ b/src/data/folderMapping.json
@@ -1,20 +1,25 @@
 {
   "kapi-bong-baby-no-edit": "(Mar 2025) Album Kapi - Bống Baby House (Chưa chỉnh)",
+  "phanthietdec2024": "(Dec 2024) Phan Thiết",
   "cambodiaapr2024": "(Apr 2024) Cambodia - Phnom Penh, Kep, Campot 🇰🇭",
+  "nhatbandec2023": "(Dec 2023) Nhật Bản - Tokyo - Onsite Salto Japan 🇯🇵",
   "kiengianghonsonov2023": "(Nov 2023) Kiên Giang - Hòn Sơn",
   "quangngailysonjun2023": "(Jun 2023) Quãng Ngãi - Lý Sơn",
   "thailanphuketapr2023": "(Apr 2023) Thailand - Phuket - Honeymoon Trip 🇹🇭",
+  "quangtrihuedamcuoihaisaltomar2023":"(Mar 2023) Quảng Trị - Huế - Đàm Cưới Anh Hải Salto",
   "hgmvhn081222131222": "(Dec 2022) Hà Giang - Hà Nội - Mèo Vạc",
   "anhcuoihyphucnov2022": "(Nov 2022) Ảnh Cưới Hỷ Phục",
   "gialai061022-091022": "(Oct 2022) Gia Lai",
   "bentrebatri180922": "(Sep 2022) Bến Tre - Ba Tri",
   "dalat30822010822chuphinhcuoi": "(Sep 2022) Đà Lạt - Chụp Hình Cưới",
   "vungtau28082022": "(Aug 2022) Vũng Tàu",
+  "workshoptoongtengceramicjul2022":"(Jul 2022) Workshop Toong Teng - Ceramic Workshop",
   "phanthietcompanytripsaltojul2022": "(Jul 2022) Phan Thiết - Company Trip Salto",
   "tetnguyendan2022": "(Feb 2022) Tết Nguyên Đán 2022",
   "vungtaufeb2022": "(Feb 2022) Vũng Tàu",
   "nhatrangfeb2022": "(Feb 2022) Nha Trang",
   "tetduonglich2022": "(Jan 2022) Tết Dương Lịch 2022",
   "dalat1417012022": "(Jan 2022) Đà Lạt - Đường Hoa Đào",
-  "weddingnhutnhi": "Thử váy cưới"
+  "weddingnhutnhi": "Thử váy cưới",
+  "tham-quan-tru-so-ubnd-hcm": "Tham Quan Trụ Sở UBND HCM"
 } 
