Feat: Add basic authen

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ VITE_AWS_ACCESS_KEY_ID=
 VITE_AWS_SECRET_ACCESS_KEY=
 VITE_AWS_REGION=
 VITE_S3_BUCKET_NAME=
+
+VITE_AUTH_USERNAME=none
+VITE_AUTH_PASSWORD=none
